--- a/calc.html
+++ b/calc.html
@@ -22,11 +22,11 @@
         </ul>
         <ul>
             <li><a href="index.html">Ed's Website</a></li>
-            <li><a href="calc.html">Calculator Project</a></li>
-            <li><a href="originabout.html">About Me</a></li>
-            <li><a href="mailto:allvaldi@outlook.com">Contact Me</a></li>
+            <li class="hideOnMobile"><a href="calc.html">Calculator Project</a></li>
+            <li class="hideOnMobile"><a href="originabout.html">About Me</a></li>
+            <li class="hideOnMobile"><a href="mailto:allvaldi@outlook.com">Contact Me</a></li>
             
-            <li onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            <li class="mb" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
 </ul>        
     </nav>
 
